2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Added images, javascripts and css directories.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Fixed bugs in login system.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Login structure created. Error messages and index are still missing.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Moved possible 'generos' and 'estados civis" from views to controllers.

2009-05-02 Suzana Matos <suzana.mato@gmail.com>
* Fixed combobox in Hospede:
	- edit
	- new

2009-05-02 Suzana Matos <suzana.mato@gmail.com>
* Translated the form labels to Portuguese
* Fixed class diagram
	- Deleted nasc, the duplication of nascimento

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Removed unnecessary files.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Added Servico scaffold and some validation.
* Added tables servicos, apartamentos and recepcionistas db/createTables.sql.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Added Hospede scaffold and presence validation.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Fixed SQL error in createTables.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* For some unknown reason the Umbrello file wasn't openning here. I took a file that
Suzana sent me and replaced the old one.
* Modified db scrips. It's more organized now. Remember to change 'iuri' in
createDatabase to the your database user.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Changed database configuration file config/database.yml.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Added Umbrello file.
* Added create.sql. It needs modifications.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Modified database configurations.
* Added Changelog file.

2009-05-01 Iuri Fernandes <iurifq@gmail.com>
* Created initial Rails structure.